# DevOpsA4

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  sonar-project.properties
app/: __init__.py  db.py  routes.py  schema.sql  seed.sql
performance/: load_test.js
reports/: e2e.xml
tests/: conftest.py  test_dishes.py  test_e2e.py
